[tool.poetry]
name = "matrix42sdk"
version = "2.0.0"
description = "Python SDK for Matrix42 Enterprise Service Management CMBD"
authors = ["dmpe <cincenko@outlook.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^1.0"

[tool.poetry.dev-dependencies]
mock = "^3.0"
pytest-cov = "^2.8"
isort = {extras = ["pyproject"], version = "^4.3.21"}
black = "^19.10b0"
mypy = "^0.782"
pytest = "^5.4.3"
pylint = "^2.5.3"
twine = "*"
keyring = "*"
artifacts-keyring = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --capture=no"
testpaths = [
    "tests"
]

[tool.black]
line-length = 90
target-version = ['py36', 'py37', 'py38']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.isort]
profile = "black"
known_standard_library = "dataclasses,typing_extensions"
known_third_party = "click,log"
combine_as_imports = true
force_grid_wrap = false
include_trailing_comma = true
lines_after_imports = 2
line_length = 90
default_section = "FIRSTPARTY"
